--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -251,10 +251,16 @@ a:focus {
     -o-background-size: cover;
 }
 
+.login-section{
+    padding-bottom: 100px
+    background-color: #FA8B60;
+}
+
 #login {
     width: 100%;
     height: 200px;
     margin-top: 100px;
+
 }
 
 
@@ -325,3 +331,78 @@ a:focus {
     }       
 }
 
+
+
+.btn {
+    text-transform: uppercase;
+    font-family: Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 200;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.btn-default {
+    border: 1px solid #EF6D3B;
+    color: #FA8B60;
+    background-color: transparent;
+}
+
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #7A9A95;
+    outline: 0;
+    color: #000;
+    background-color: #7A9A95;
+}
+
+.btn-huge {
+    padding: 25px;
+    font-size: 26px;
+}
+
+.banner-social-buttons {
+    margin-top: 0;
+}
+
+@media(max-width:1199px) {
+    ul.banner-social-buttons {
+        margin-top: 15px;
+    }
+}
+
+@media(max-width:767px) {
+    ul.banner-social-buttons>li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.banner-social-buttons>li:last-child {
+        margin-bottom: 0;
+    }
+}
+
+::-moz-selection {
+    text-shadow: none;
+    background: #fcfcfc;
+    background: rgba(255,255,255,.2);
+}
+
+::selection {
+    text-shadow: none;
+    background: #fcfcfc;
+    background: rgba(255,255,255,.2);
+}
+
+img::selection {
+    background: 0 0;
+}
+
+img::-moz-selection {
+    background: 0 0;
+}
+
+body {
+    webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
