--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -174,12 +174,7 @@ a:focus {
     margin-bottom: 250px;
 }
 
-.Join{
 
-    margin-top: 150px;
-    margin-bottom: 150px;
-    text-align: center;
-}
 
 .btn-circle {
     width: 70px;
@@ -259,7 +254,21 @@ a:focus {
     padding-top: 100px;
 }
 
+
+
+.Join{
+
+    margin-top: 150px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+
 .Join-section {
+
     width: 100%;
     padding: 50px 0;
     color: #000;
@@ -271,10 +280,12 @@ a:focus {
     padding-top: 150px;
     padding-bottom: 150px;
     text-align: center;
+
+
+
     
 
 }
-
 
 
 
