--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -258,7 +258,10 @@ a:focus {
 
 .Join{
 
-    margin:auto;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -267,20 +270,18 @@ a:focus {
 .Join-section {
 
     width: 100%;
-    padding: 50px 0;
+    padding: 50px;
     color: #000;
     background-color: #7A9A95;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     text-align: center;
-
-
-
-    
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
