--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -73,8 +73,26 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #f9f9f9;
+    text-align: center;
 }
+
+.navbar-custom label  {
+    color: #000;
+    text-align: center;
+    font-size: 12px;
+    
+}
+
+#fg {
+
+    color: #000;
+    text-align: center;
+    font-size: 12px;
+}
+
+
+.navbar-custom 
 
 .navbar-custom .nav li a {
     -webkit-transition: background .3s ease-in-out;
@@ -268,8 +286,8 @@ a:focus {
 
 .Join{
 
-    margin-top: 150px;
-    margin-bottom: 150px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
 
@@ -287,8 +305,6 @@ a:focus {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    padding-top: 100px;
-    padding-bottom: 100px;
     text-align: center;
 
 }
