--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -321,8 +321,6 @@ display: none;
 
 .Join{
 
-    margin-left: auto;
-    margin-right: auto;
 
 }
 
@@ -606,3 +604,11 @@ body {
     
 }
 
+.well {
+    background-color: #3F2860;
+}
+
+.well legend {
+
+    color: #fff;
+}
