--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -2,8 +2,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Lato' ,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #90C5A9;
+    color: #000;
+    background-color: #dddad6;
 
 
 }
@@ -92,12 +92,12 @@ display: none;
 }
 
 .navbar-custom a {
-    color: #f9f9f9;
+    color: #000;
     text-align: center;
 }
 
 .navbar-custom label  {
-    color: #000;
+    color: #fff;
     text-align: center;
     font-size: 12px;
     
@@ -105,7 +105,7 @@ display: none;
 
 #fg {
 
-    color: #000;
+    color: #fff;
     text-align: center;
     font-size: 12px;
 }
@@ -158,9 +158,9 @@ display: none;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
 
-    .top-nav-collapse {
+    .top-nav-collapse { 
         padding: 0;
-        background-color: #000;
+        background-color: #fff;
     }
 
     .navbar-custom.top-nav-collapse {
@@ -175,8 +175,8 @@ display: none;
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
-    background-color: #3F2860;
+    color: #000;
+    background-color: #dddad6;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -191,7 +191,7 @@ display: none;
 .brand-heading {
     font-family: 'Bowlby One SC', sans-serif;
     font-size: 40px;
-    color: #FA8B60;
+    color: #000;
 }
 
 .intro-text {
@@ -620,6 +620,5 @@ body {
 .well legend {
 
     color: #000;
-=======
->>>>>>> fe95d109f11bee56a7e84df3d1da81df6475826a
+
 }
