--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -1,9 +1,9 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Lato' ,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Lato',Helvetica,Arial,sans-serif;
     color: #000;
-    background-color: #dddad6;
+    background-color: #fff;
 
 
 }
@@ -27,7 +27,7 @@ h6 {
 }
 
 p {
-    font-family: 'Lato', 'sans-serif';
+ 
     margin: 0 0 25px;
     font-weight: 200;
     line-height: 1.5;
@@ -173,25 +173,32 @@ display: none;
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 150px 0;
     text-align: center;
     color: #000;
-    background-color: #dddad6;
-    -webkit-background-size: cover;
+    margin-top: 100px;
+    background-color: transparent;
+    background-image:url("/assets/img/womanSavings.jpeg");
+    background-size: 650px 697px;
+    background-repeat: no-repeat;
+    background-position:right bottom;
+   /* -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover;*/
 }
 
 .intro-body {
     display: table-cell;
     vertical-align: middle;
+    
 }
 
 .brand-heading {
-    font-family: 'Bowlby One SC', sans-serif;
-    font-size: 40px;
-    color: #000;
+    font-family: 'Candal', sans-serif;
+    color: darkgray;
+    position: relative;
+    float: left;
 }
 
 .intro-text {
@@ -235,52 +242,6 @@ display: none;
     padding-bottom: 250px;
 }
 
-about{
-   
-    background-image:url('/assets/img/arches.png');
-  }
-
-
-.btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 15px;
-    border: 2px solid #fff;
-    border-radius: 35px;
-    font-size: 40px;
-    color: #fff;
-    text-align: center;
-    background: 0 0;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
-.btn-circle:hover,
-.btn-circle:focus {
-    outline: 0;
-    color: #fff;
-    background: rgba(255,255,255,.1);
-}
-
-.page-scroll .btn-circle i.animated {
-    -webkit-transition-property: -webkit-transform;
-    -webkit-transition-duration: 1s;
-    -moz-transition-property: -moz-transform;
-    -moz-transition-duration: 1s;
-}
-
-.page-scroll .btn-circle:hover i.animated {
-    -webkit-animation-name: pulse;
-    -moz-animation-name: pulse;
-    -webkit-animation-duration: 1.5s;
-    -moz-animation-duration: 1.5s;
-    -webkit-animation-iteration-count: infinite;
-    -moz-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
-}
 
 @-webkit-keyframes pulse {    
     0 {
@@ -320,66 +281,6 @@ about{
     padding-top: 100px;
 }
 
-
-
-.Join{
-
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-
-
-
-
-.Join-section {
-
-    width: 100%;
-    padding: 50px;
-    color: #000;
-    /*background-color: #7A9A95;*/
-    background-image:url('/assets/img/pattern_152.gif');
-    background-repeat:repeat;
-   /* -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;*/
-    text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-
-}
-
-#circle1 {
-width: 200px;
-height: 200px;
-background: #FA8B60;
-float: left;
-page-break-inside: auto;
-}
-
-#circle2 {
-width: 200px;
-height: 200px;
-background: #FA8B60;
-page-break-inside: auto;
-}
-
-#circle3 {
-width: 200px;
-height: 200px;
-background: #FA8B60;
-float: right;
-page-break-inside: auto;
-}
-
-.circle {
-border-radius: 50%;
-display: inline-block;
-margin-right: 20px;
-margin-top: 100px;
-}
 
 
 @media (min-width: 768px) {
@@ -459,7 +360,7 @@ margin-top: 100px;
 }
 
 .btn-default {
-    border: 1px solid #EF6D3B;
+    border: 1px dash #000;
     color: #3F2860;
     background-color: transparent;
 }
@@ -583,12 +484,6 @@ body {
    content: "e"; 
 }
 
-.niceicons{
-    font-size: 100px;
-    margin-top: 40px;
-    color: #EF6D3B;
-}
-
 
 .container {
     margin-top: 20px;
@@ -603,17 +498,12 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 280px;
-  background: 
-  /* color overlay */ 
-    linear-gradient(
-      rgba(240, 212, 0, 0.45), 
-      rgba(0, 0, 0, 0.45)
-    ),
+ 
     
 }
 
 .well {
-    background-color: #f3f3f3;
+    background-color: #f7f7f7;
 }
 
 .well legend {
