--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -125,7 +125,7 @@ display: none;
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li.active {
     outline: 0;
-    background-color: rgba(255,255,255,.2);
+    background-color: #f9f9f9;
 }
 
 .navbar-toggle {
@@ -183,16 +183,12 @@ display: none;
     background-image:url("/assets/img/womanSavings.jpeg");
     background-size: 650px 697px;
     background-repeat: no-repeat;
-    background-position:right bottom;
-   /* -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;*/
+    background-position:right top;
 }
 
 .intro-body {
     display: table-cell;
-    vertical-align: top;
+    vertical-align: middle;
     
 }
 
@@ -232,17 +228,29 @@ display: none;
     margin-bottom: 250px;
 }
 
-#contact{
+#contact h1{
+    font-family: 'Poiret One', sans-serif;
+    font-size: 70px;
     margin-top: 50px;
     margin-bottom: 100px;
+    color: #25881B;
 
 }
 
-#about{
-   
-    
-    padding-top: 250px;
-    padding-bottom: 250px;
+#contact {
+    padding-bottom: 100px;
+}
+
+#about h1{    
+    font-family: 'Poiret One', sans-serif;
+    font-size: 70px;   
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: #25881B;
+}
+
+#about {
+    padding-bottom: 130px;
 }
 
 
