--- a/public/assets/css/tandas.css
+++ b/public/assets/css/tandas.css
@@ -67,7 +67,7 @@ background-color: black;
 div.hr hr {
 display: none;
 }
-
+x
 
 
 
@@ -82,7 +82,7 @@ display: none;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
-    background-color: #000;
+    background-color: #FFF;
 }
 
 .navbar-brand {
@@ -124,7 +124,7 @@ display: none;
 .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: #000;
 }
 
 .navbar-toggle:focus,
